crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__struct_derivation-4.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveHasRegions>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::HasRegions for TestInst {
    fn regions(&self) -> impl Iterator<Item = &::kirin_ir::Region> {
        __KirinRegionsIter {
            parent: self,
            index: 0,
        }
    }
}
#[automatically_derived]
pub struct __KirinRegionsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinRegionsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        let TestInst { e, .. } = self.parent;
        match self.index {
            0 => {
                self.index += 1;
                Some(e)
            }
            _ => None,
        }
    }
}
