crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__vec_resultvalue_field.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: check(input)
---
#[automatically_derived]
impl ::kirin_ir::Instruction for TestInst {
    fn is_terminator(&self) -> bool {
        false
    }
    fn is_constant(&self) -> bool {
        false
    }
    fn is_pure(&self) -> bool {
        false
    }
    fn arguments(&self) -> impl Iterator<Item = &::kirin_ir::SSAValue> {
        let TestInst { args, .. } = self;
        args.iter()
    }
    fn results(&self) -> impl Iterator<Item = &::kirin_ir::ResultValue> {
        let TestInst { results, .. } = self;
        results.iter()
    }
    fn successors(&self) -> impl Iterator<Item = &::kirin_ir::Block> {
        __KirinSuccessorsIter {
            parent: self,
            index: 0,
        }
    }
    fn regions(&self) -> impl Iterator<Item = &::kirin_ir::Region> {
        __KirinRegionsIter {
            parent: self,
            index: 0,
        }
    }
}
#[automatically_derived]
pub struct __KirinArgumentsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinArgumentsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        unreachable!("struct with container should not generate iterator");
    }
}
#[automatically_derived]
pub struct __KirinResultsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinResultsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        unreachable!("struct with container should not generate iterator");
    }
}
#[automatically_derived]
pub struct __KirinSuccessorsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinSuccessorsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        let TestInst { .. } = self.parent;
        match self.index {
            _ => None,
        }
    }
}
#[automatically_derived]
pub struct __KirinRegionsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinRegionsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        let TestInst { .. } = self.parent;
        match self.index {
            _ => None,
        }
    }
}
